# cs-question-agent

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements-optional.txt  requirements.txt
.github/workflows/: ci.yml  deploy.yml
app/: __init__.py  cache.py  cli.py  config.py  hashing.py  logging.py  models.py  orchestrator.py  telemetry.py
app/adapters/: __init__.py  anthropic_adapter.py  cohere_adapter.py  google_adapter.py  llm_base.py  mock_adapter.py  ollama_adapter.py  openai_adapter.py  replay_adapter.py
app/answer/: __init__.py  generator.py  grounding.py  repair.py
app/chapters/: __init__.py  chapter_matcher.py  selector_parser.py
app/extract/: __init__.py  pdf_parser.py  question_extractor.py  regex_rules.py
app/ingest/: __init__.py  discover.py
app/judge/: __init__.py  answer_judge.py  extraction_judge.py  match_judge.py  score_aggregator.py
app/publish/: __init__.py  github_pages.py
app/render/: __init__.py  site_builder.py
app/retrieval/: __init__.py  chunker.py  store.py
docs/: SPEC.md
example_input/: project.yaml
example_input/chapter_selectors/: selectors.md
example_input/markschemes/: networks.md
igcse_input/: project.yaml
prompts/: classify_question_to_chapter.v1.txt  extract_question.v1.txt  generate_answer_teacher.v1.txt  judge_answer.v1.txt  judge_extraction.v1.txt  judge_match.v1.txt  manifest.yaml  parse_chapter_selector.v1.txt  repair_answer.v1.txt
runs/: ch1_questions_clean.json  ch4_questions.json
scripts/: make_sample_paper.py  render_curated.py
site/: index.html  landing.html
tests/: conftest.py
(+38 files in other folders)
