[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cs-question-agent"
version = "0.1.0"
description = "Batch agent that processes computer-science question papers and publishes student-friendly worked-answer PDFs."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Deepak Prabhakara" }]
dependencies = [
    "pydantic>=2.7,<3",
    "pyyaml>=6.0",
    "click>=8.1",
    "jinja2>=3.1",
    "pymupdf>=1.24",
    "rapidfuzz>=3.9",
    "numpy>=1.26",
    "rank-bm25>=0.2.2",
    "reportlab>=4.2",
    "httpx>=0.27",
]

[project.optional-dependencies]
render = ["weasyprint>=62.0"]
openai = ["openai>=1.40"]
anthropic = ["anthropic>=0.34"]
google = ["google-generativeai>=0.7"]
cohere = ["cohere>=5.9"]
dev = ["pytest>=8", "pytest-cov>=5", "ruff>=0.5"]

[project.scripts]
cs-agent = "app.cli:cli"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.setuptools.package-data]
app = ["render/html_templates/*.html"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    "integration: full-pipeline tests",
]

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]
